--- a/src/css/about.css
+++ b/src/css/about.css
@@ -8,7 +8,7 @@
   margin-bottom: 200px;
   justify-content: center;
   display: flex;
-  margin-left: 70px;
+  margin-left: 40px;
   
   
 }
