--- a/src/css/foodCat.css
+++ b/src/css/foodCat.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    margin-left: 70px;
+    margin-left: 40px;
     
     
 }
